--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -19,11 +19,11 @@
                         {{usuariosss.persona.Apellido1}}  {{usuariosss.persona.Nombre1}} 
                       
                         <div class="ml-2" *ngIf="usuariosss"> <!-- Agregado un margen izquierdo para separar el texto del usuario de la imagen -->
-                          <img [src]="'http://localhost:3000/imagenes/' + usuariosss.persona.foto" alt="Foto de usuario" class="img-carnet circular-image">
+                          <img [src]="'http://localhost:3000/imagenes/' + usuariosss.persona.foto" alt="Foto de usuario" class="img-carnet circular-imagert">
                         </div>
                       
                         <p class="ml-2"> <!-- Agregado un margen izquierdo para separar el texto del usuario de "Some Actions" -->
-                          <span class="d-lg-none d-md-block">Some Actions</span>
+                          <span class="d-lg-none d-md-block"> </span>
                         </p>
                       </a>
                       
