--- a/src/app/platos/platos.component.html
+++ b/src/app/platos/platos.component.html
@@ -52,7 +52,7 @@
                     Tipo menú
                   </th>
                   <th>
-                    Plato
+                    Menú
                   </th>
                   <th>
                     Precio
@@ -92,6 +92,13 @@
 
 
             </div>
+
+
+            
+            <div *ngIf="!pagedMenus || pagedMenus.length === 0" class="text-center">
+              <img src="/assets/img/menu.png" class="edit" alt="" />
+            </div>
+    
        
           <!-- Contenedor para centrar la paginación -->
 <div class="pagination-containerrrr">
@@ -132,17 +139,25 @@
                 </div>
                 <div class="options-container">
                   <ng-container *ngFor="let item of tipomenusss">
-                    <div class="option example-full-width estilos" *ngIf="!showMoreOptions && index >= 7"
-                      (click)="selectOption(item)">{{ item.tipo }}</div>
-                    <div class="option estil editable-row" *ngIf="showMoreOptions" (click)="selectOption(item)">{{
-                      item.tipo }}</div>
+                    <div class="option example-full-width estilos" *ngIf="!showMoreOptions && index >= 7" (click)="selectOption(item)">{{ item.tipo }}</div>
+                    <div class="option estil editable-row" *ngIf="showMoreOptions" (click)="selectOption(item)">{{ item.tipo }}</div>
                     <div *ngIf="showIdTipomenuError" class="text-danger">Campo requerido</div>
                   </ng-container>
+
+                  
+                  <div class="selected-option     editable-row"  data-toggle="modal" data-target="#ventanaFormOtro" (click)="nuevoCursoOtro()">
+                    {{ getSelectedOptionLabelotro() }}
+                    <img src="assets/img/sumar.png" alt="" class="down-arrow">
+                  </div>
+                
+ 
+                
+                
                 </div>
               </div>
-
             </div>
           </div>
+          
 
           <div class="form-row">
             <div class="form-group col-md-8">
@@ -170,6 +185,52 @@
         <button type="button" class="btn " data-dismiss="modal" (click)="closeModal()">Cerrar</button>
         <button type="button" class="btn btn-danger" (click)="addMenu()" data-dismiss="modal">
           {{ editandoPlato ? 'Modificar' : 'Registrar' }}
+        </button>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
+
+
+
+
+
+
+
+<div class="modal fade" id="ventanaFormOtro" data-backdrop="static" data-keyboard="false" tabindex="-1" role="dialog"
+  aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content d-flex align-items-center">
+      <div class=" heads x">
+        <h5 class="modal-title texto-grueso" id="exampleModalLabel">{{tituloFormOtro}} <img src="assets/img/menuicono.png"
+            alt=""></h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <form [formGroup]="TipomenuForm">
+
+        
+          
+
+          <div class="form-row">
+            <div class="form-group col-md-8">
+              <label for="inputState" class="select-gr">Categoría</label> <br>
+              <input class="example-full-width estilos" type="text" formControlName="tipo">
+              <div *ngIf="showDescripcionError" class="text-danger">Campo requerido</div>
+            </div>
+          </div>
+ 
+
+          <input type="hidden" formControlName="funcion">
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn " data-dismiss="modal" (click)="closeModal()">Cerrar</button>
+        <button type="button" class="btn btn-danger" (click)="addTipodMenu()" data-dismiss="modal">
+          {{ editandoTipomenu ? 'Modificar' : 'Registrar' }}
         </button>
       </div>
     </div>
