--- a/src/app/reporteingresos/reporteingresos.component.html
+++ b/src/app/reporteingresos/reporteingresos.component.html
@@ -41,7 +41,7 @@
             <div class="form-group">
               <div class="formmm">
                 <div class="search-container">
-                  <label class="label">Seleccionar el plato:</label>
+                  <label class="label">Seleccionar el menú:</label>
                   <div class="search-box">
                     <input type="text" class="form-control" list="list-timezone-platos" [(ngModel)]="platoSeleccionado.descripcion" (input)="updatePlatoId($event)" />
                     <datalist id="list-timezone-platos">
@@ -197,7 +197,7 @@
         src="/assets/img/estadisticas.png"
         class="edit"
         alt=""
-      /> Reporte de Plato por día</h4>
+      /> Reporte de menú por día</h4>
      
      
       <li class="nav-item dropdown">
@@ -223,9 +223,9 @@
       <div class="table-responsive">
         <table class="table">
           <thead class="text-primary">
-            <th>Plato</th>
+            <th>Menú</th>
             <th>Fecha</th>
-            <th>Cantidad</th>
+            <th>Cantidad del menú</th>
             <th>Con créditos</th>
             <th>Sin créditos</th>
           </thead>
@@ -256,7 +256,7 @@
         src="/assets/img/estadisticas.png"
         class="edit"
         alt=""
-      /> Reporte de Plato por Semana</h4>
+      /> Reporte de menú por Semana</h4>
      
      
       <li class="nav-item dropdown">
@@ -282,10 +282,10 @@
       <div class="table-responsive">
         <table class="table">
           <thead class="text-primary">
-            <th>Plato</th>
+            <th>Menú</th>
             <th>Fecha Inicio</th>
             <th>Fecha Final</th>
-            <th>Cantidad</th>
+            <th>Cantidad del menú</th>
             <th>Con créditos</th>
             <th>Sin créditos</th>
           </thead>
@@ -316,7 +316,7 @@
         src="/assets/img/estadisticas.png"
         class="edit"
         alt=""
-      /> Reporte de Plato por Mes</h4>
+      /> Reporte de menú por Mes</h4>
      
      
       <li class="nav-item dropdown">
@@ -342,9 +342,9 @@
       <div class="table-responsive">
         <table class="table">
           <thead class="text-primary">
-            <th>Plato</th>
+            <th>Menú</th>
             <th>Mes</th>
-            <th>Cantidad</th>
+            <th>Cantidad del menú</th>
             <th>Con créditos</th>
             <th>Sin créditos</th>
           </thead>
