--- a/src/app/reporteproducto/reporteproducto.component.html
+++ b/src/app/reporteproducto/reporteproducto.component.html
@@ -204,7 +204,7 @@
           Descargar    <i class="material-icons">file_download</i> 
           
             <p>
-                <span class="d-lg-none d-md-block">Some Actions</span>
+                <span class="d-lg-none d-md-block"></span>
             </p>
         </a>
         <div class="dropdown-menu  dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
@@ -222,16 +222,16 @@
       <div class="table-responsive">
         <table class="table">
           <thead class="text-primary">
-            <th>Ingrediente</th>
+            <th>Producto</th>
             <th>Fecha</th>
-            <th>Total de libras/litros</th>
+            <th>Total de gramos/mililitros/unidades</th>
           </thead>
           <tbody>
             <ng-container *ngFor="let item of ingredientesdiass">
               <tr>
                 <td>{{ item.id_alimento }}</td>
                 <td>{{ item.fecha }}</td>
-                <td>{{ item.totalCantidadFinal }}</td>
+                <td>{{ item.cantidadPersonaGramo | number:'1.4-4'}}</td>
               </tr>
             </ng-container>
             
@@ -258,7 +258,7 @@
           Descargar    <i class="material-icons">file_download</i> 
           
             <p>
-                <span class="d-lg-none d-md-block">Some Actions</span>
+                <span class="d-lg-none d-md-block"> </span>
             </p>
         </a>
         <div class="dropdown-menu  dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
@@ -276,9 +276,9 @@
       <div class="table-responsive">
         <table class="table">
           <thead class="text-primary">
-            <th>Ingrediente</th>
+            <th>Producto</th>
             <th>Mes</th>
-            <th>Total de libras/litros</th>
+            <th>Total de gramos/mililitros/unidades</th>
           </thead>
           <tbody>
             <ng-container *ngFor="let item of ingredientesdiass">
@@ -286,7 +286,8 @@
                 <td>{{ item.id_alimento }}</td>
                 <td>{{ meses[item.mes - 1] }}</td>
 
-                <td>{{ item.sumaCantidadFinal }}</td>
+                <td>{{ item.sumaCantidadPersonaGramo | number:'1.4-4' }}</td>
+
               </tr>
             </ng-container>
             
@@ -313,7 +314,7 @@
           Descargar    <i class="material-icons">file_download</i> 
           
             <p>
-                <span class="d-lg-none d-md-block">Some Actions</span>
+                <span class="d-lg-none d-md-block"> </span>
             </p>
         </a>
         <div class="dropdown-menu  dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
@@ -331,10 +332,10 @@
       <div class="table-responsive">
         <table class="table">
           <thead class="text-primary">
-            <th>Ingrediente</th>
+            <th>Producto</th>
             <th>Fecha Inicio</th>
             <th>Fecha Final</th>
-            <th>Total de libras/litros</th>
+            <th>Total de gramos/mililitros/unidades</th>
           </thead>
           <tbody>
             <ng-container *ngFor="let item of ingredientesdiass">
@@ -342,7 +343,9 @@
                 <td>{{ item.id_alimento }}</td>
                 <td>{{ item.fechaInicio }}</td>
                 <td>{{ item.fechaFin }}</td>       
-                <td>{{ item.totalCantidadFinal }}</td>
+               
+                <td>{{ item.totalCantidadPersonaGramo | number:'1.4-4' }}</td>
+
               </tr>
             </ng-container>
             
