--- a/src/app/alimentos/alimentos.component.html
+++ b/src/app/alimentos/alimentos.component.html
@@ -32,8 +32,34 @@
       <div class="col-md-12">
 
         <div class="card text-center">
-          <div class="card-header card-header-danger">
-            <h4 class="card-title disabled"> <img src="/assets/img/alimentos.png" class="edit" alt=""> Productos</h4>
+         
+
+
+          <div class="card-header card-header-danger d-flex align-items-center justify-content-between">
+            <h4 class="card-title disabled">
+              <img src="/assets/img/alimentos.png" class="edit" alt="">
+              Alimentos 
+            </h4>
+
+      
+
+          <li class="nav-item dropdown">
+            <a class="nav-link label2 col" href="javascript:void(0)" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"  >
+              Descargar    <i class="material-icons">file_download</i> 
+              
+                <p>
+                    <span class="d-lg-none d-md-block"> </span>
+                </p>
+            </a>
+            <div class="dropdown-menu  dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
+                <a class="dropdown-item" (click)="descargarDatos()"  >Exportar a excel <img class="tamimg" src="/assets/img/microsoft-excel.svg" alt=""> </a>
+                <a class="dropdown-item" (click)="descargarPDF()"  > Exportar a pdf <i class="material-icons">picture_as_pdf</i></a>
+              
+                
+            </div>
+        </li>
+
+
           </div>
           <div class="card-body">
             <div class="table-responsive">
@@ -46,18 +72,9 @@
                     Producto 
                   </th>
                   <th>
-                    Equivalente gramo: 
+                    Unidad de medida
                   </th>
-                  <th>
-                    Cantidad de persona
-                  </th>
-                  <th>
-                    Gramo por persona
-                  </th>
-
-                  <th>
-                   precio
-                  </th>
+                 
                   <th>
                     Acciones
                   </th>
@@ -76,22 +93,15 @@
                       {{item.descripcion}}
                     </td>
                     <td>
-                      {{item.equivalenteGramo}}
+                      {{item.unidadMedida.unidadMedida}}
                     </td>
-                    <td>
-                      {{item.cantidadPersona}}
-                    </td>
-                    <td>
-                      {{item.gramoPersona}}
-                    </td>
-                    <td>
-                      {{item.precio  |  number:'1.2-2'}}
-                    </td>
+                  
                     <td>
                     <!-- Botones de editar y eliminar alimentos -->
-                      <button1 color="primary" (click)="editarAlimento(item)">
-                        <i class="material-icons editable-row" data-toggle="modal" data-target="#ventanaForm">edit</i>
-                      </button1>
+                    <button1 color="primary" (click)="editarAlimento(item)">
+                      <i class="material-icons editable-row" data-toggle="modal" data-target="#ventanaForm">edit</i>
+                  </button1>
+                  
                       
                       <button2> <i class="material-icons editable-row" (click)="showModalEliminar(item.id)">delete</i>
                       </button2>
@@ -103,6 +113,10 @@
                 </tbody>
               </table>
             </div>
+
+            <div *ngIf="!pagedMenus || pagedMenus.length === 0" class="text-center">
+              <img src="/assets/img/canasta.png" class="edit" alt="" />
+            </div>
               <!-- Contenedor para centrar la paginación -->
   <div class="pagination-containerrrr">
     <!-- Paginación -->
@@ -113,19 +127,26 @@
     </div>
   </div>
           </div>
+
+      
+
         </div>
       </div>
     </div>
   </div>
 </div>
+
+
+
+
+
 <!-- Modal de Registro de Alimentos -->
 <div class="modal fade" id="ventanaForm" data-backdrop="static" data-keyboard="false" tabindex="-1" role="dialog"
   aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content d-flex align-items-center">
-      <div class=" heads x">
-        <h5 class="modal-title texto-grueso" id="exampleModalLabel">{{tituloForm}} <img src="assets/img/comida.png"
-            alt=""></h5>
+      <div class="heads x">
+        <h5 class="modal-title texto-grueso" id="exampleModalLabel">{{tituloForm}} <img src="assets/img/comida.png" alt=""></h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
@@ -139,38 +160,38 @@
             </div>
           </div>
 
+          <!-- Reemplaza la sección donde se muestra la opción seleccionada con estos cambios -->
           <div class="form-row">
             <div class="form-group col-md-8">
-              <label for="inputState" class="select-gr">Equivalente gramo <h6>* 1 libra equivale a 453.592 gramos /LT</h6>	</label> <br>
-              <input class="example-full-width estilos" type="number" formControlName="equivalenteGramo" >
-              <div *ngIf="showEquivalenteGramoError" class="text-danger">Campo requerido</div>
+              <label for="inputState" class="select-gr text-center">Unidad de medida</label> <br>
+              <div class="custom-dropdown" [class.show-more-options]="showMoreOptions">
+                <div class="selected-option" (click)="toggleShowMoreOptions()">
+                  {{ getSelectedOptionLabel() }}
+                  <img src="assets/img/flecha-hacia-abajo.png" alt="" class="down-arrow">
+                </div>
+                <div class="options-container">
+                  <ng-container *ngFor="let item of unidadMedidasss">
+                    <div class="option example-full-width estilos" *ngIf="!showMoreOptions && index >= 7" (click)="selectOption(item)">{{ item.unidadMedida }}</div>
+                    <div class="option estil editable-row" *ngIf="showMoreOptions" (click)="selectOption(item)">{{ item.unidadMedida }}</div>
+                    <div *ngIf="showIdTipomenuError" class="text-danger">Campo requerido</div>
+                  </ng-container>
+                  <div class="selected-option editable-row" data-toggle="modal" data-target="#ventanaFormOtro" (click)="nuevoCursoOtro()">
+                    {{ getSelectedOptionLabelotro() }}
+                    <img src="assets/img/sumar.png" alt="" class="down-arrow">
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
 
-          <div class="form-row">
-            <div class="form-group col-md-8">
-              <label for="inputState" class="select-gr">Cantidad de persona</label> <br>
-              <input class="example-full-width estilos" type="number" formControlName="cantidadPersona">
-              <div *ngIf="showCantidadPersonaError" class="text-danger">Campo requerido</div>
-              <div *ngIf="showCantidadPersonaError && alimentoForm.get('cantidadPersona')?.hasError('pattern')" class="text-danger">El campo de cantidadPersona solo permite números.</div>
-            </div>
-          </div>
-          
-          <div class="form-row">
-            <div class="form-group col-md-8">
-              <label for="inputState" class="select-gr">Precio</label> <br>
-              <input class="example-full-width estilos" type="number" formControlName="precio">
-              <div *ngIf="showPrecioError" class="text-danger">Campo requerido</div>
-              <div *ngIf="showPrecioError && alimentoForm.get('precio')?.hasError('pattern')" class="text-danger">El campo de cantidadPersona solo permite números.</div>
-            </div>
-          </div>
-      
+          <br> 
+
           <input type="hidden" formControlName="funcion">
         </form>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn " data-dismiss="modal" (click)="closeModal()">Cerrar</button>
-        <button type="button" class="btn btn-danger" (click)="addAlimento()" data-dismiss="modal">
+        <button type="button" class="btn" data-dismiss="modal" (click)="closeModal()">Cerrar</button>
+        <button type="button" class="btn btn-danger" (click)="addAlimento()">
           {{ editandoAlimento ? 'Modificar' : 'Registrar' }}
         </button>
       </div>
@@ -178,3 +199,57 @@
   </div>
 </div>
 
+
+
+
+
+
+
+
+
+
+
+<div class="modal fade" id="ventanaFormOtro" data-backdrop="static" data-keyboard="false" tabindex="-1" role="dialog"
+  aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content d-flex align-items-center">
+      <div class=" heads x">
+        <h5 class="modal-title texto-grueso" id="exampleModalLabel">{{tituloFormOtro}} <img src="assets/img/menuicono.png"
+            alt=""></h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <form [formGroup]="unidadMedidaForm">
+
+        
+          
+
+          <div class="form-row">
+            <div class="form-group col-md-8">
+              <label for="inputState" class="select-gr">Unidad de Medida</label> <br>
+              <input class="example-full-width estilos" type="text" formControlName="unidadMedida">
+              <div *ngIf="showDescripcionError" class="text-danger">Campo requerido</div>
+            </div>
+          </div>
+
+          <div class="form-row">
+            <div class="form-group col-md-8">
+              <label for="inputState" class="select-gr">Valor de Medida</label> <br>
+              <input class="example-full-width estilos" type="text" formControlName="valorMedida">
+              <div *ngIf="showDescripcionError" class="text-danger">Campo requerido</div>
+            </div>
+          </div>
+ 
+
+          <input type="hidden" formControlName="funcion">
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn " data-dismiss="modal" (click)="closeModal()">Cerrar</button>
+        <button type="button" class="btn btn-danger" (click)="addUnidadMedida()" data-dismiss="modal">
+          {{ editandoAlimento ? 'Modificar' : 'Registrar' }}
+        </button>
+      </div>
+    </div>
+  </div>
+</div>
