--- a/src/app/credito/credito.component.scss
+++ b/src/app/credito/credito.component.scss
@@ -14,6 +14,9 @@
   
 }
 
+.tam{
+  width: 500px;
+}
 
 .tamimg{
   height: 25px;
@@ -46,6 +49,7 @@
 .editable-row:hover {
   background-color: #ffffff;
 }
+
 
 .edit-mode {
   background-color: #ffffff;
@@ -171,9 +175,19 @@ th {
   
 }
 .radio-checked i {
-  color: #007bff; /* Color deseado para el círculo cuando está seleccionado */
+  color: #ec3e12; /* Color deseado para el círculo cuando está seleccionado */
 }
-
+/* CSS */
+.radio-custom {
+  /* Ajusta el tamaño del radio */
+  width: 20px;
+  height: 20px;
+  cursor: pointer;
+}
+.letrasi{
+  margin-right: 20px; 
+  font-size: 22px;
+}
 
 .pagination-containerrrr {
   display: flex;
@@ -241,17 +255,10 @@ th {
   font-size: 18px;
 }
 /*----------------para la modal----------------------------------*/
-.tam{
-  width: 1000px;
-  
-}
-
-.tam1{
-  width: 1130px;
-  
-}
+ 
+ 
 .heads {
-  width: 1000px;
+  
   display: flex;
   //justify-content: center;
   align-items: center;
@@ -389,7 +396,7 @@ header {
 }
 .formmm3 {
   margin-left: 30px;
-  width: 800px;
+  width: 500px;
   }
     .search-containerr {
       display: flex;
@@ -400,7 +407,7 @@ header {
       border: 1px solid #ccc;
       border-radius: 5px;
       box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.1);
-      width: 800px;
+     
     }
     .containerversion2{
       display: flex;
@@ -632,4 +639,56 @@ header {
 
 #filtroSelect option:not([value="Seleccionar"]):before {
   content: '\00a0'; /* Carácter de espacio no rompible para mantener el tamaño del espacio */
+}
+
+
+
+
+
+
+
+/* Estilos CSS para el diseño */
+.containeract {
+  margin-top: 20px;
+}
+
+.credito-info {
+  margin-bottom: 30px;
+  border: 1px solid #ccc;
+  padding: 20px;
+  border-radius: 5px;
+}
+
+.credito-por-fecha {
+  margin-top: 20px;
+}
+ 
+
+
+
+.credito-detalle {
+  border-top: 1px solid #ccc;
+  padding-top: 10px;
+  margin-top: 10px;
+}
+
+.total-precio {
+  font-weight: bold;
+  margin-top: 10px;
+}
+ 
+
+thead th:first-child,
+thead th:nth-child(2),
+thead th:nth-child(3),
+thead th:nth-child(4) {
+  font-weight: bold;
+}
+
+thead:not(.text-primary) th {
+  font-weight: bold;
+}
+
+thead.text-primary th {
+  font-weight: normal;
 }
