--- a/src/app/ingredientes/ingredientes.component.html
+++ b/src/app/ingredientes/ingredientes.component.html
@@ -1,37 +1,59 @@
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
 
+
+
+
 <div class="main-content">
   <div class="container-fluid">
+ 
     <button mat-raised-button type="submit" class="btn1 btn-danger pull-right card-title" data-toggle="modal"
-      data-target="#ventanaForm" (click)="nuevoCurso()">
-      AGREGAR +
+    data-target="#ventanaForm" (click)="nuevoCurso()">
+    AGREGAR +
     </button>
 
-
-
     <div class="search-container">
-      <label class="label" >Buscar el nombre del plato:</label>
+      <label class="label" >Buscar el nombre del menú:</label>
       <div class="search-box">
-        <input type="text" class="form-control" list="list-timezone"  [(ngModel)]="ingredientId" />
-        <datalist id="list-timezone">
-          <option *ngFor="let ingrediente of descripcplato" [value]="ingrediente.descripcion"></option>
+        <input type="text" class="form-control" list="list-timezone2"  [(ngModel)]="listaId" />
+        <datalist id="list-timezone2">
+          <option *ngFor="let ingrediente of listaPlatos" [value]="ingrediente.descripcion"></option>
         </datalist>
       </div>
       <button type="button" class="btn btn-danger" (click)="buscarIngredientePorId(); buscarDescripcionporId()">
         Buscar<i class="fa fa-search fa-stack-1x"></i>
       </button>
+
+    
       
     </div>
-
+   
     <div class="row"  >
       <div class="col-md-12">
         <div class="card text-center">
-          <div class="card-header card-header-danger">
+          <div class="card-header card-header-danger d-flex align-items-center justify-content-between">
             <h4 class="card-title disabled">
               <img src="/assets/img/alimentos.png" class="edit" alt="" />
-              Productos con su plato
+              Productos con su menú (cálculos para n menú-persona)
             </h4>
+
+            <li class="nav-item dropdown">
+              <a class="nav-link label2 col" href="javascript:void(0)" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"  >
+                Descargar    <i class="material-icons">file_download</i> 
+                
+                  <p>
+                      <span class="d-lg-none d-md-block"> </span>
+                  </p>
+              </a>
+              <div class="dropdown-menu  dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
+                  <a class="dropdown-item" (click)="descargarExcel()"  >Exportar a excel <img class="tamimg" src="/assets/img/microsoft-excel.svg" alt=""> </a>
+                  <a class="dropdown-item" (click)="descargarPDF()"  > Exportar a pdf <i class="material-icons">picture_as_pdf</i></a>
+                
+                  
+              </div>
+          </li>
+  
           </div>
+          <br>
           <div class="card-body " *ngIf="mostrarTabla">
             <div class="table-responsive">
               
@@ -44,42 +66,74 @@
                 </div>
               </ng-container>
               
-              
+               
               <table class="table" *ngIf="productosplatosss && productosplatosss.length > 0">
-
                 <thead class="text-primary" *ngFor="let item of ingredientedescripcionsss">
-                  <th>Plato: {{ item.plato.descripcion }}</th>
+                  <th>Menú: {{ item.plato.descripcion }}</th>
+                  <th>Cantidad: <input type="text" list="list-timezone3" [(ngModel)]="cantidad" style="width: 100px; border: 1px solid #918d8d;">
+                  </th>
                 </thead>
+                
                 <thead class="text-primary">
                   <th>Nº</th>
-
-                  <th>Ingrediente</th>
-                
-
-                  <th>Acciones</th>
+                  <th>Producto</th>
+                  <th>Unidad de medida</th>
+                  <th>Cantidad de persona que come</th>
+                  <th>Porción por persona</th>
+                  <th>Porción por {{ cantidad }} personas</th> 
                 </thead>
+                
                 <tbody *ngFor="let item of productosplatosss; let i = index">
                   <tr>
+                    <td>{{ i + 1 }}</td>
+                    <td>{{ item.alimento.descripcion }}</td>
+                    <td>{{ item.unidadMedida.unidadMedida }}</td>
+                    <td>{{ item.cantidadPersonaCome }}</td>
                     <td>
-                      {{ i + 1 }}
+                      {{ item.cantidadPersonaGramo }}
+                      <span *ngIf="item.unidadMedida.unidadMedida.toLowerCase() === 'libra'">(gramos)</span>
+                      <span *ngIf="item.unidadMedida.unidadMedida.toLowerCase() === 'litro'">(mililitros)</span>
+                      <span *ngIf="item.unidadMedida.unidadMedida.toLowerCase() === 'kilo'">(gramos)</span>
+                      <span *ngIf="item.unidadMedida.unidadMedida.toLowerCase() === 'onza'">(gramos)</span>
+                      <span *ngIf="item.unidadMedida.unidadMedida.toLowerCase() === 'atado'">(gramos)</span>
+                      <span *ngIf="item.unidadMedida.unidadMedida.toLowerCase() === 'medio atado'">(gramos)</span>
+                      <span *ngIf="item.unidadMedida.unidadMedida.toLowerCase() === '1/2 atado'">(gramos)</span>
+                      <span *ngIf="item.unidadMedida.unidadMedida.toLowerCase() === 'cucharada'">(gramos)</span>
+                      <span *ngIf="item.unidadMedida.unidadMedida.toLowerCase() === 'taza'">(gramos)</span>
+                      <span *ngIf="item.unidadMedida.unidadMedida.toLowerCase() === 'vaso'">(mililitros)</span>
+                      <span *ngIf="item.unidadMedida.unidadMedida.toLowerCase() === 'cucharadita'">(mililitros)</span>
+                      <span *ngIf="item.unidadMedida.unidadMedida.toLowerCase() === 'pieza'">(unidad)</span>
+                      <span *ngIf="item.unidadMedida.unidadMedida.toLowerCase() === 'unidad'">(unidad)</span>
+                      <span *ngIf="item.unidadMedida.unidadMedida.toLowerCase() === 'cubeta'">(unidad)</span>
                     </td>
-
                     <td>
-                      {{ item.alimento.descripcion }}
-                    </td>
-                 
-
-                    <td>
-                  
-
-                      <button2>
-                        <i class="material-icons editable-row" (click)="showModalEliminar(item.id)">delete</i>
-                      </button2>
+                      {{ item.cantidadPersonaGramo * cantidad }}
+                      <span *ngIf="item.unidadMedida.unidadMedida.toLowerCase() === 'libra'">(gramos)</span>
+                      <span *ngIf="item.unidadMedida.unidadMedida.toLowerCase() === 'litro'">(mililitros)</span>
+                      <span *ngIf="item.unidadMedida.unidadMedida.toLowerCase() === 'kilo'">(gramos)</span>
+                      <span *ngIf="item.unidadMedida.unidadMedida.toLowerCase() === 'onza'">(gramos)</span>
+                      <span *ngIf="item.unidadMedida.unidadMedida.toLowerCase() === 'atado'">(gramos)</span>
+                      <span *ngIf="item.unidadMedida.unidadMedida.toLowerCase() === 'medio atado'">(gramos)</span>
+                      <span *ngIf="item.unidadMedida.unidadMedida.toLowerCase() === '1/2 atado'">(gramos)</span>
+                      <span *ngIf="item.unidadMedida.unidadMedida.toLowerCase() === 'cucharada'">(gramos)</span>
+                      <span *ngIf="item.unidadMedida.unidadMedida.toLowerCase() === 'taza'">(gramos)</span>
+                      <span *ngIf="item.unidadMedida.unidadMedida.toLowerCase() === 'vaso'">(mililitros)</span>
+                      <span *ngIf="item.unidadMedida.unidadMedida.toLowerCase() === 'cucharadita'">(mililitros)</span>
+                      <span *ngIf="item.unidadMedida.unidadMedida.toLowerCase() === 'pieza'">(unidad)</span>
+                      <span *ngIf="item.unidadMedida.unidadMedida.toLowerCase() === 'unidad'">(unidad)</span>
+                      <span *ngIf="item.unidadMedida.unidadMedida.toLowerCase() === 'cubeta'">(unidad)</span>
+                   
                     </td>
                   </tr>
                 </tbody>
               </table>
+              
+              
             </div>
+          </div>
+
+          <div *ngIf="!productosplatosss || productosplatosss.length === 0" class="text-center">
+            <img src="/assets/img/librooo.png" class="edit" alt="" />
           </div>
           <!-- Contenedor para centrar la paginación -->
 <div class="pagination-containerrrr">
@@ -103,6 +157,65 @@
     </div>
   </div>
 </div>
+        
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 <style>
   @media (max-width: 768px) {
@@ -122,9 +235,9 @@
 
 
 
+
 <div class="modal fade tam1 my-custom-modal" id="ventanaForm" data-backdrop="static" data-keyboard="false" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document" style="position: fixed; top: 45%; left: 50%; transform: translate(-50%, -50%); display: flex; flex-direction: column; justify-content: center; align-items: center;">
-
     <div class="modal-content tam">
       <div class="heads x tam1 ">
         <h5 class="modal-title texto-grueso " id="exampleModalLabel">
@@ -132,158 +245,116 @@
         </h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"></button>
       </div>
-
+      
       <div class="modal-body modal-with-padding">
-        <form [formGroup]="ingredientesForm">
-          <div class="form-row">
-            <div class="form-group col-md-8">
-              <div class="formmm">
-                <div class="search-container">
-                  <label class="label">Buscar el nombre del plato:</label>
-                  <div class="search-box">
-                    <input type="text" class="form-control" list="list-timezone-plato"
-                    [value]="platoSeleccionado.descripcion" (input)="updatePlatoId($event)" formControlName="id_plato" />
-             
-                  
+        <div class="common-width-container">
+          <form [formGroup]="ingredientesForm">
 
-                    <datalist id="list-timezone-plato">
-                      <option *ngFor="let item of productosplato" [value]="item.descripcion"></option>
-                    </datalist>
+            <div class="form-row">
+              
+              <div class="form-group col-md-12">
+                <div class="formmm">
+                  <div class="search-container">
+                    <label class="label">Buscar el nombre del plato:</label>
+                   
+
+
+                    <div class="search-box">
+                      <input type="text" class="form-control" list="list-timezonee-plato"
+                        [value]="platoSeleccionado.descripcion" (input)="updatePlatoId($event)" formControlName="id_plato" />
+                      <datalist id="list-timezonee-plato">
+                        <option *ngFor="let ingrediente of descripcplato" [value]="ingrediente.descripcion"></option>
+                      </datalist>
+                    </div>
+
+                    <button type="button" class="btn btn-danger" (click)="buscarIngredientePorIdRecetario()">
+                      Buscar <i class="fa fa-search fa-stack-1x"></i>
+                    </button>
                   </div>
                 </div>
               </div>
             </div>
-
+            
+            <!-- Campo oculto para enviar los alimentos seleccionados -->
+            <input type="hidden" formControlName="id_alimentos" />
           
-
-
-
-
-
-
-
-
-
-
-                     
-
-
-
-
-
-
-
-
-
-
-
-
-
-            <div class="form-group col-md-8">
-              <div class="formmm">
-               
-                
-             
-                  <div class="col-md-12">
-
-                    <div class="card ">
-                     
-
-
-                      <div class="card-body">
-                        <div class="table-responsive">
-                      
-                       
-                        
+          
+          </form>
+          
+          <div class="form-row">
+            <div class="form-group col-md-12">
+              <div class="formmm search-container container-centered">
+                <div class="search-box container-fluid">
+                  <div class="container-centered">
+                    <br><br>
+                    <div class="text-center">
+                      <h2 class="t">INGREDIENTES</h2>
+                    </div>
+                    <div class="d-flex justify-content-between align-items-center">
+                      <div class="ml-auto" style="width: 170px;">
+                        <div class="input-group">
                           
-                        
-                          <div class="container">
-                            <label class="label text-center">Seleccione los ingredientes:</label>
-                            <br>
-                          
-                            <div style="display: flex; align-items: center; justify-content: flex-end;">
-                              <input type="search" class="form-control mb-2" placeholder="Buscar ingredientes" style="width: 150px;" (input)="filtrarIngredientes($event.target.value)">
-                              <i class="fa fa-search bm" aria-hidden="true" style="margin-left: 5px;"></i>
-                            </div>
-                            
-                            
-                           
-
-                            
-                            <!-- Elementos seleccionados -->
-                            <div *ngIf="ingredientesSeleccionados.length > 0" style="display: inline-block;">
-                              <h3 class="h3" style="display: inline-block; margin-right: 10px; font-weight: bold;">Elementos seleccionados: </h3>
-
-                              <div style="display: inline-block; font-style: italic;">
-                                <ng-container *ngFor="let selected of ingredientesSeleccionados; let i = index">
-                                  <ng-container *ngIf="i > 0 && i % 14 === 0">
-                                    <br /> <!-- Cambiar a una nueva fila después de 15 elementos -->
-                                  </ng-container>
-                                  <ng-container *ngIf="i > 0">, </ng-container> <!-- Agregar coma entre elementos -->
-                                  {{ selected.descripcion }}
-                                </ng-container>
-                              </div>
-                              
-                            </div>
-                          
-                            <br>
-                          
-                            <!-- Listado de ingredientes con checkboxes -->
-                            <div class="container">
-                              <div class="row">
-                                <div class="col-2 border" *ngFor="let ingrediente of ingredientesUnicos">
-                                  <label class="form-check" *ngIf="ingrediente.visible !== false">
-                                    <input type="checkbox" class="form-check-input" (change)="seleccionarIngrediente(ingrediente)" formControlName="id_alimento">
-                                    <span [ngStyle]="{'color': ingrediente.seleccionado ? 'red' : 'black'}">
-                                      {{ ingrediente.descripcion }}
-                                    </span>
-                                  </label>
-                                </div>
-                              </div>
-                            </div>
-                          </div>
-                          
-                          
-
-
-
-
-
-
-
-
                         </div>
-                        
-             
                       </div>
                     </div>
+                    
+                    
+                    <div class="container-centered2 text-center">
+                      <table class="platos" >
+                        <tr>
+                         <th></th>
+                          <th class="liu">Ingredientes</th>
+                          <th class="liu">Unidad medida</th>
+                          <th class="liu">Cantidad de personas que come</th>
+                        </tr>
+                        
+                        <ng-container *ngFor="let alimentos of alimentosFiltrados; let i = index">
+                          <tr *ngIf="i >= pageIndex * pageSizecc && i < (pageIndex + 1) * pageSizecc">
+                            <td>
+                              <input type="checkbox" [(ngModel)]="alimentos.selected" (change)="updateTotal(); updateFormValues(); checkIfAllSelected()" style="width: 18px; height: 18px; cursor: pointer; opacity: 0;">
+                            </td>
+                            <td  class="liu">{{ alimentos.alimento }}</td>
+                            <td  class="liu">{{ alimentos.unidadMedida }}</td>
+                            <td >
+                              <input type="number" [(ngModel)]="alimentos.cantidadPersonaCome" (change)="updateTotal()" min="0" step="1" style="width: 60px;">
+                              <input type="hidden" [(ngModel)]="alimentos.nombre" name="nombrePlato">
+                            </td>
+                          </tr>
+                        </ng-container>
+                      </table>
+                    </div>
+                    <div class="pagination-container centered-horizontal d-flex justify-content-center">
+                      <div class="pagination">
+                        <button class="tamanoletra" (click)="prevPage()" [disabled]="pageIndex === 0">
+                          <i class="fa fa-arrow-left"></i> Anterior
+                        </button>
+                        <button class="tamanoletra" (click)="nextPage()" [disabled]="pageIndex === maxPageIndex()">
+                          Siguiente <i class="fa fa-arrow-right"></i>
+                        </button>
+                      </div>
+                      <br><br><br><br>
+                    </div>
                   </div>
-                
-                  
-                
+                </div>
               </div>
             </div>
-
-
-
           </div>
-
-        
-       
-          <input type="hidden" formControlName="funcion" />
-        </form>
+        </div>
       </div>
 
-      <div class="modal-footer justify-content-center">
-        <button type="button" class="btn" data-dismiss="modal" (click)="closeModal()" (click)="closeModalAfterCancel()">
+      <div class="modal-footer fixed-footer justify-content-center">
+        <button type="button" class="btn" data-dismiss="modal" (click)="closeModal()"  (click)="resetForm()" >
           Cerrar
         </button>
         <button type="button" class="btn btn-danger" (click)="addIngredientes()" data-dismiss="modal">
           {{ editandoIngredientes ? 'Modificar' : 'Registrar' }}
         </button>
+        
       </div>
     </div>
   </div>
 </div>
+
+
 
 
