--- a/src/app/listadoadministradores/listadoadministradores.component.html
+++ b/src/app/listadoadministradores/listadoadministradores.component.html
@@ -32,7 +32,7 @@
                 Descargar    <i class="material-icons">file_download</i> 
                 
                   <p>
-                      <span class="d-lg-none d-md-block">Some Actions</span>
+                      <span class="d-lg-none d-md-block"></span>
                   </p>
               </a>
               <div class="dropdown-menu  dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
