--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,50 +1,81 @@
-<div class="main-container">
-  <form class="login-form" [formGroup]="loginForm">
-    <div class="login-text">
-      <div class="logo-container">
-        <img src="assets/img/log.png" alt="">
+
+
+
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+
+<link href="https://fonts.google.com/icons?selected=Material+Symbols+Outlined:quick_reference:FILL@0;wght@400;GRAD@0;opsz@24&icon.query=INFORMA&icon.size=24&icon.color=%235f6368&icon.platform=android" rel="stylesheet" />
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+
+
+
+<style>
+  .vertical-center {
+    min-height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+</style>
+
+<div class="main-content">
+  <div class="container-fluid ">
+    <div class="row">
+      <div class="col-md-12">
+        <div class="vertical-center">
+          <div class="card text-center">
+            <form class="" [formGroup]="loginForm">
+              <div class="login-text">
+                <div class="logo-container">
+                  <img src="assets/img/log.png" alt="">
+                </div>
+                <span class="fa-stack fa-2x">
+                  <i class="fa fa-user fa-stack-1x"></i>
+                </span>
+              </div>
+
+
+             
+              <!-- Username Input with Icon -->
+              <div class="input-container">
+                <span class="input-icon">
+                  <i class="fa fa-user"></i>
+                </span>
+                <input type="email" class="login-username" autofocus="true" required="true" placeholder="Usuario" formControlName="Identificacion" />
+              </div>
+              <!-- Password Input with Icon -->
+              <div class="input-container">
+                <div class="password-input-container">
+                  <span class="input-icon">
+                    <i class="fa fa-lock"></i>
+                  </span>
+                  <input type="{{ showPassword ? 'text' : 'password' }}" class="login-password" required="true" placeholder="Contraseña" formControlName="contrasena" />
+                  <span class="show-password-icon" (click)="togglePasswordVisibility()">
+                    <i class="fa fa-eye" *ngIf="showPassword"></i>
+                    <i class="fa fa-eye-slash" *ngIf="!showPassword"></i>
+                  </span>
+                </div>
+              </div>
+              <input type="submit" name="Login" value="Ingresar" class="login-submit" (click)="login()" />
+              <div class="register-link" *ngIf="!hayUsuarios" style="margin-top: 20px; margin-bottom: 20px;">¿No tienes cuenta? <a (click)="crearUsuario()">Regístrate</a></div>
+            </form>
+          </div>
+        </div>
       </div>
-      <span class="fa-stack fa-2x">
-        <i class="fa fa-user fa-stack-1x"> </i>
-      </span>
     </div>
- 
-    
-    <!-- Username Input with Icon -->
-    <div class="input-container">
-      <span class="input-icon">
-        <i class="fa fa-user"></i>
-      </span>
-      <input type="email" class="login-username" autofocus="true" required="true" placeholder="Usuario" formControlName="Identificacion" />
-    </div>
-
-<!-- Password Input with Icon -->
-<div class="input-container">
- 
-  <div class="password-input-container">
-
-    <span class="input-icon">
-      <i class="fa fa-lock"></i>
-    </span>
-    <input type="{{ showPassword ? 'text' : 'password' }}" class="login-password" required="true" placeholder="Contraseña" formControlName="contrasena" />
-    <span class="show-password-icon" (click)="togglePasswordVisibility()">
-      <i class="fa fa-eye" *ngIf="showPassword"></i>
-      <i class="fa fa-eye-slash" *ngIf="!showPassword"></i>
-    </span>
   </div>
-</div>
-
-
-
-
-    <input type="submit" name="Login" value="Ingresar" class="login-submit" (click)="login()" />
-
-    <div class="register-link" *ngIf="!hayUsuarios" style="margin-top: 20px; margin-bottom: 20px;"> 
-      ¿No tienes cuenta? <a (click)="crearUsuario()">Regístrate</a>
-    </div>
-  </form>
 
   <div class="underlay-photo "></div>
   <div class="underlay-black"></div>
   <router-outlet></router-outlet>
 </div>
+
+
+
+ 
+
+
+
+
+ 
+
+ 
