--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -98,6 +98,13 @@ input {
   margin-top: 1rem;
 }
 
+.card{
+  background-color: rgba(235, 234, 227, 0.956);
+  width: auto;
+  text-align: center;
+  border-radius: 20px;
+  border: 2px solid black;
+}
 .login-form input[type="submit"] {
   margin-top: 1rem;
 }
@@ -211,6 +218,7 @@ input {
   justify-content: center;
   margin-bottom: 2rem;
   margin-top: 2rem;
+  padding: 0.7rem;
 }
 
 .logo-container img {
