--- a/src/app/perfilcliente/perfilcliente.component.html
+++ b/src/app/perfilcliente/perfilcliente.component.html
@@ -1,163 +1,292 @@
 
-<nav class="navbar navbar-expand-lg navbar navbar-absolute fixed-top">
-    <div class="container-fluid d-flex justify-content-between align-items-center">
-      <!-- Elementos a la izquierda -->
-      <div class="d-flex align-items-center">
-        <img class="clsimg" src="assets/img/log.png" alt="">      </div>
+
+<div class="main-content">
   
-      <!-- Elemento al medio (Inicio) -->
-      <div class="navbar-wrapper"  routerLink="/reporte">
-       
-        <span class="icon-text jk"><i class="material-icons cl jm">home</i></span>
-        <span class="j icon-text">Inicio</span>
-      </div>
-  
-      <!-- Elementos a la derecha -->
-      <div class="d-flex align-items-center">
-        <ul class="navbar-nav">
-          <li class="nav-item dropdown">
-            <a class="nav-link cltitle d-flex align-items-center" href="javascript:void(0)" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              
-            
-              <div class="ml-2 lt" *ngIf="usuariosss"> <!-- Agregado un margen izquierdo para separar el texto del usuario de la imagen -->
-                {{usuariosss.persona.Apellido1}}   {{usuariosss.persona.Nombre1}}  <img [src]="'http://localhost:3000/imagenes/' + usuariosss.persona.foto" alt="Foto de usuario" class="img-carnet circular-image">
-              </div>
-            
-              <p class="ml-2"> <!-- Agregado un margen izquierdo para separar el texto del usuario de "Some Actions" -->
-                <span class="d-lg-none d-md-block">Some Actions</span>
-              </p>
-            </a>
 
 
-            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
-              <a class="dropdown-item" routerLink="/editardatosperfil"><i class="material-icons">settings</i> Cofiguración y privacidad</a>
-              <a class="dropdown-item xx" (click)="showModalcerrar()"><i class="material-icons">exit_to_app</i> Cerrar sesión</a>
+
+ 
+  <div class="wrapper  ">
+    <div class="sidebar  " data-color="danger" data-background-color="white" data-image="./assets/img/sidebar-1.jpg">
+      
+      <div class="logo ">
+        <a  class="simple-text"  *ngIf="usuariosss">
+            <div class=" taml ">
+              <img [src]="'http://localhost:3000/imagenes/' + usuariosss.persona.foto" alt="Foto de usuario" class="  circular-image">
+  
+            </div> 
+            <div class="letrausua">
+              {{usuariosss.persona.Apellido1}}  {{usuariosss.persona.Nombre1}} 
             </div>
-          </li>
+         
+    
+        </a>
+        
+        
+    </div>
+    
+    
+    <div class="sidebar-wrapper   ">
+        <br>
+        <div class="text-center esp" routerLink="/reporte"  >
+          <span  class="icon-text "><i class="material-icons cl">home</i> </span> <span class="icon-text">Inicio</span>
+        </div>
+          
+    
+      <div *ngIf="isMobileMenu()">
+       
+     
+        <ul class="nav navbar-nav nav-mobile-menu">
+          
+            <li class="nav-item dropdown">
+             
+                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
+                    <a class="dropdown-item" href="#">Mike John responded to your email</a>
+                    <a class="dropdown-item" href="#">You have 5 new tasks</a>
+                    <a class="dropdown-item" href="#">You're now friend with Andrew</a>
+                    <a class="dropdown-item" href="#">Another Notification</a>
+                    <a class="dropdown-item" href="#">Another One</a>
+                </div>
+            </li>
+         
         </ul>
       </div>
+      <ul class="nav">
+        <li routerLinkActive="active" *ngFor="let menuItem of menuItems" class="{{menuItem.class}} nav-item curr">
+          <a class="nav-link curr" (click)="menuItem.path === '/login' ? showModalcerrar() : navigateToRoute(menuItem.path)">
+            <i class="material-icons">{{menuItem.icon}}</i>
+            <p>{{menuItem.title}}</p>
+          </a>
+        </li>
+      </ul>
+      
     </div>
-  </nav>
-  
-  
-  
-  
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
-    
-  </head>
-  
-  <body>
-    <header class="header">
-      <div class="header-content">
-         
-              <img class="logo" src="assets/img/log.png" alt="">
-         
-          <div>
-          <img class="user-avatar" src="assets/img/WhatsApp Image 2023-05-14 at 8.08.13 AM.jpeg" alt="Foto de perfil"> Jamy LV
-         
-          </div>
-          
-        </div>
-    </header>
-  
-    
+        
+        <div class="sidebar-background" style="background-image: url(./assets/img/sidebar-4.jpg)"></div>
+    </div>
+    <div class="main-panel">
 
-    <main  id="report-content " class=" ">
-        <label for="fecha"> </label>
-       
-        <div class="main-content ">
-          <div class="container-fluid ">
-        
-        
-            <div class="row ">
+              <!-- NAVBARRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRR-->
+
+              <nav class="navbar navbar-expand-lg navbar  navbar-absolute fixed-top">
+                <div class="container-fluid">
+                    <div class="navbar-wrapper">
+                        <img src="assets/img/log.png" alt="" class="logonavbar">
+                       
+                    </div>
+                    
+
+                    <button mat-icon-button color="accent" aria-label="Example icon button with a menu icon"    class="navbar-toggler" type="button" (click)="sidebarToggle()">
+                      
+                      <span class="sr-only">Toggle navigation</span>
+                      <span class="navbar-toggler-icon icon-bar"></span>
+                      <span class="navbar-toggler-icon icon-bar"></span>
+                      <span class="navbar-toggler-icon icon-bar"></span>
+                    </button>
+
+
+                    <div class="collapse navbar-collapse justify-content-end " id="navigation" >
+                      
+                        <ul class="navbar-nav">
+                          
+                            
+                           
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+            
+          
+            
+
+
+
+        <router-outlet>
+          <br><br><br><br><br> 
+    <div class="container-fluid">
+  
+   
+  
+  
+      <div class="row ">
              
         
-              <div class="col-md-12 ">
-        
-                <div class="card">
-                    <div class="card-header card-header-danger">
-                      <h2 class="card-title"><img src="assets/img/configuraciones.png" alt=""> Configuración y Privacidad</h2>
+        <div class="col-md-12 ">
+  
+          <div class="card">
+              <div class="card-header card-header-danger">
+                <h2 class="card-title"><img src="assets/img/configuraciones.png" alt=""> Configuración y Privacidad</h2>
+              </div>
+              <div class="card-body">
+                <div id="typography">
+                  <div class="card-title">
+                    <h2>Tu Información</h2>
+                  </div>
+                  <div class="row" *ngIf="usuariosss">
+                    <!-- Left Column -->
+                    <div class="col-md-8">
+                      <div class="tim-typo table-rowr" data-toggle="modal" data-target="#ventanaUsuario">
+                        <h3>
+                          <span class="tim-note">Usuario</span> <span class="clr">{{usuariosss.Identificacion}}</span>
+                        </h3>
+                      </div>
+                      
+                      <div class="tim-typo table-rowr" data-toggle="modal" data-target="#ventanaNombre">
+                        <h3>
+                          <span class="tim-note">Apellido1</span> <span class="clr">{{usuariosss.persona.Apellido1}}</span>
+                        </h3>
+                      </div>
+
+                      <div class="tim-typo table-rowr" data-toggle="modal" data-target="#ventanaNombre">
+                        <h3>
+                          <span class="tim-note">Apellido2</span> <span class="clr">{{usuariosss.persona.Apellido2}}</span>
+                        </h3>
+                      </div>
+
+                      <div class="tim-typo table-rowr" data-toggle="modal" data-target="#ventanaNombre">
+                        <h3>
+                          <span class="tim-note">Nombre1</span> <span class="clr">{{usuariosss.persona.Nombre1}}</span>
+                        </h3>
+                      </div> 
+
+                      <div class="tim-typo table-rowr" data-toggle="modal" data-target="#ventanaNombre">
+                        <h3>
+                          <span class="tim-note">Nombre2</span> <span class="clr">{{usuariosss.persona.Nombre2}}</span>
+                        </h3>
+                      </div>
+                      
+                      <div class="tim-typo table-row editable-row" data-toggle="modal" data-target="#ventanaEmail" (click)="editaremail(usuariosss)">
+                        <h3>
+                          <span class="tim-note">Email</span>{{usuariosss.persona.EmailInstitucional}}
+                        </h3>
+                      </div>
+                      
+                      <div class="tim-typo table-row editable-row" data-toggle="modal" data-target="#ventanaTelefono" (click)="editartelefono(usuariosss)">
+                        <h3>
+                          <span class="tim-note">Telèfono</span>{{usuariosss.persona.TelefonoC}}
+                        </h3>
+                      </div>
                     </div>
-                    <div class="card-body">
-                      <div id="typography">
-                        <div class="card-title">
-                          <h2>Tu Información</h2>
-                        </div>
-                        <div class="row" *ngIf="usuariosss">
-                          <!-- Left Column -->
-                          <div class="col-md-8">
-                            <div class="tim-typo table-rowr" data-toggle="modal" data-target="#ventanaUsuario">
-                              <h3>
-                                <span class="tim-note">Usuario</span> <span class="clr">{{usuariosss.Identificacion}}</span>
-                              </h3>
-                            </div>
-                            
-                            <div class="tim-typo table-rowr" data-toggle="modal" data-target="#ventanaNombre">
-                              <h3>
-                                <span class="tim-note">Apellido1</span> <span class="clr">{{usuariosss.persona.Apellido1}}</span>
-                              </h3>
-                            </div>
-
-                            <div class="tim-typo table-rowr" data-toggle="modal" data-target="#ventanaNombre">
-                              <h3>
-                                <span class="tim-note">Apellido2</span> <span class="clr">{{usuariosss.persona.Apellido2}}</span>
-                              </h3>
-                            </div>
-
-                            <div class="tim-typo table-rowr" data-toggle="modal" data-target="#ventanaNombre">
-                              <h3>
-                                <span class="tim-note">Nombre1</span> <span class="clr">{{usuariosss.persona.Nombre1}}</span>
-                              </h3>
-                            </div> 
-
-                            <div class="tim-typo table-rowr" data-toggle="modal" data-target="#ventanaNombre">
-                              <h3>
-                                <span class="tim-note">Nombre2</span> <span class="clr">{{usuariosss.persona.Nombre2}}</span>
-                              </h3>
-                            </div>
-                            
-                            <div class="tim-typo table-row editable-row" data-toggle="modal" data-target="#ventanaEmail" (click)="editaremail(usuariosss)">
-                              <h3>
-                                <span class="tim-note">Email</span>{{usuariosss.persona.EmailInstitucional}}
-                              </h3>
-                            </div>
-                            
-                            <div class="tim-typo table-row editable-row" data-toggle="modal" data-target="#ventanaTelefono" (click)="editartelefono(usuariosss)">
-                              <h3>
-                                <span class="tim-note">Telèfono</span>{{usuariosss.persona.TelefonoC}}
-                              </h3>
-                            </div>
-                          </div>
-                          
-                          <!-- Right Column for Photo -->
-                          <div class="col-md-4 text-right">
-                            <div class="tim-typo table-row editable-row" data-toggle="modal" data-target="#ventanaFoto" (click)="editarfoto(usuariosss)">
-                              
-                              <!-- Display the image with the class for the desired size -->
-                              <img *ngIf="usuariosss.persona.foto" [src]="'http://localhost:3000/imagenes/' + usuariosss.persona.foto" alt="Foto de usuario" class="img-carnet2">
-                            </div>
-                          </div>
-                        </div>
+                    
+                    <!-- Right Column for Photo -->
+                    <div class="col-md-4 text-right">
+                      <div class="tim-typo table-row editable-row" data-toggle="modal" data-target="#ventanaFoto" (click)="editarfoto(usuariosss)">
                         
+                        <!-- Display the image with the class for the desired size -->
+                        <img *ngIf="usuariosss.persona.foto" [src]="'http://localhost:3000/imagenes/' + usuariosss.persona.foto" alt="Foto de usuario" class="img-carnet2">
                       </div>
                     </div>
                   </div>
+                  
+                </div>
               </div>
-        
             </div>
-          </div>
-          
         </div>
-        
+  
+      </div>
+    </div>
+        </router-outlet>
+        <div *ngIf="isMaps('maps')">
+            <app-footer>
+  
+              
+            </app-footer>
+        </div>
+    </div>
     
-       
-      </main>
+  </div>
+  
+  
+  
+   
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+   </div>
+  
+  
+   
+  
+   
+   
+  
+  
+    
+  
+    
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+ 
 
 
 
@@ -183,13 +312,16 @@
       aria-labelledby="exampleModalLabel" aria-hidden="true">
       <div class="modal-dialog" role="document">
         <div class="modal-content d-flex align-items-center">
-          <div class=" heads x">
-            <h5 class="modal-title texto-grueso" id="exampleModalLabel">Editar Email <img src="assets/img/email.png"
-                alt=""></h5>
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-  
-            </button>
+          
+          
+          <div class="modal-content d-flex align-items-center justify-content-center x">
+            <h5 class="modal-title texto-grueso m-0 text-center" id="exampleModalLabel">Editar Email <img src="assets/img/email.png" alt=""></h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close"></button>
           </div>
+          
+
+          
+
           <div class="modal-body">
             <form [formGroup]="usuarioForm">
               <div class="form-group col-md-8">
@@ -212,12 +344,14 @@
       aria-labelledby="exampleModalLabel" aria-hidden="true">
       <div class="modal-dialog" role="document">
         <div class="modal-content d-flex align-items-center">
-          <div class=" heads x">
-            <h5 class="modal-title texto-grueso" id="exampleModalLabel">Editar Teléfono <img src="assets/img/llamada.png"
-                alt=""></h5>
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-  
-            </button>
+         
+
+
+              
+          <div class="modal-content d-flex align-items-center justify-content-center x">
+            <h5 class="modal-title texto-grueso m-0 text-center" id="exampleModalLabel">Editar Teléfono <img src="assets/img/llamada.png"
+              alt=""></h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close"></button>
           </div>
           <div class="modal-body">
             <form [formGroup]="usuarioForm">
@@ -242,9 +376,19 @@
       aria-labelledby="exampleModalLabel" aria-hidden="true">
       <div class="modal-dialog" role="document">
         <div class="modal-content d-flex align-items-center">
-          <div class=" heads x">
-            <h5 class="modal-title texto-grueso" id="exampleModalLabel">Editar Foto <img src="assets/img/imagen.png"
+
+
+
+       
+
+
+
+          <div class="modal-content d-flex align-items-center justify-content-center x">
+            <div class="mimg">
+              <h5 class="modal-title texto-grueso m-0 text-center " id="exampleModalLabel">Editar Foto <img src="assets/img/imagen.png" class="mimg"
                 alt=""></h5>
+            </div>
+            
             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
   
             </button>
