--- a/src/app/productosplato/productosplato.component.scss
+++ b/src/app/productosplato/productosplato.component.scss
@@ -387,3 +387,30 @@ header {
 }
 
 
+.col{
+  color: #ffffff;
+}
+
+.label2 {
+  display: inline-flex;
+  align-items: center;
+  
+  font-family:  sans-serif;
+  font-size: small;
+  font-size: 18px;
+  font-weight: bold; 
+}
+.nav-item {
+  list-style: none; /* Elimina el estilo de viñeta de la lista */
+}
+.dropdown-menu .dropdown-item:hover {
+  background-color: #ea3f2c; /* Cambia el color de fondo al que desees */
+}
+.dropdown-menu{
+  cursor: pointer;
+}
+
+.tamimg{
+  height: 25px;
+  width: 25px;
+}
