--- a/src/app/reporte/reporte.component.html
+++ b/src/app/reporte/reporte.component.html
@@ -1,164 +1,279 @@
 
-<nav class="navbar navbar-expand-lg navbar  navbar-absolute fixed-top">
-  <div class="container-fluid">
-      <div class="navbar-wrapper">
-          <img class="clsimg" src="assets/img/log.png" alt="">
-      </div>
-      <button mat-raised-button class="navbar-toggler" type="button">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="navbar-toggler-icon icon-bar"></span>
-          <span class="navbar-toggler-icon icon-bar"></span>
-          <span class="navbar-toggler-icon icon-bar"></span>
-      </button>
-      <div class="collapse navbar-collapse justify-content-end " id="navigation" >
-        
-          <ul class="navbar-nav">
-            
-              <li class="nav-item dropdown">
-                <a class="nav-link cltitle d-flex align-items-center" href="javascript:void(0)" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                 
-                
-                  <div class="ml-2 lt" *ngIf="usuariosss"> <!-- Agregado un margen izquierdo para separar el texto del usuario de la imagen -->
-                    {{usuariosss.persona.Apellido1}}    {{usuariosss.persona.Nombre1}}   <img [src]="'http://localhost:3000/imagenes/' + usuariosss.persona.foto" alt="Foto de usuario" class="img-carnet circular-image">
-                  </div>
-                
-                  <p class="ml-2"> <!-- Agregado un margen izquierdo para separar el texto del usuario de "Some Actions" -->
-                    <span class="d-lg-none d-md-block">Some Actions</span>
-                  </p>
-                </a>
-                  <div class="dropdown-menu  dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
-                      <a class="dropdown-item"  routerLink="/editardatosperfil" > <i class="material-icons">settings</i> Cofiguración y privacidad</a>
-                      <a class="dropdown-item xx" (click)="showModalcerrar()"> <i class="material-icons">exit_to_app</i>  Cerrar sesión</a>
-                      
-                  </div>
-              </li>
-             
-          </ul>
-      </div>
-  </div>
-</nav>
 
-
-
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<div class="main-content">
   
-  
-</head>
 
-<body>
-  <header class="header">
-    <div class="header-content">
-       
-            <img class="logo" src="assets/img/log.png" alt="">
-       
-        <div>
-        <img class="user-avatar" src="assets/img/WhatsApp Image 2023-05-14 at 8.08.13 AM.jpeg" alt="Foto de perfil"> Jamy LV
-       
-        </div>
-        
-      </div>
-  </header>
 
+
+ 
+  <div class="wrapper  ">
+    <div class="sidebar  " data-color="danger" data-background-color="white" data-image="./assets/img/sidebar-1.jpg">
+      
+      <div class="logo ">
+        <a  class="simple-text"  *ngIf="usuariosss">
+            <div class=" ">
+              <img [src]="'http://localhost:3000/imagenes/' + usuariosss.persona.foto" alt="Foto de usuario" class="  circular-image">
   
-  <main  id="report-content " class=" ">
-    <label for="fecha"> </label>
-   
-    <div class="main-content ">
-      <div class="container-fluid ">
-    
-    
-        <div class="row ">
+            </div> 
+            <div class="letrausua">
+              {{usuariosss.persona.Apellido1}}  {{usuariosss.persona.Nombre1}} 
+            </div>
          
     
-          <div class="col-md-12">
-    
-            <div class="card">
-              <div class="card-header card-header-danger d-flex align-items-center justify-content-between">
-                
-                <h4 class="card-title disabled"> <img src="/assets/img/tarjeta-de-credito.png" class="edit" alt=""> Reporte de convenio
-                </h4>
-                <li class="nav-item dropdown">
-                  <a class="nav-link label2 col" href="javascript:void(0)" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"  >
-                    Descargar    <i class="material-icons">file_download</i> 
-                    
-                      <p>
-                          <span class="d-lg-none d-md-block">Some Actions</span>
-                      </p>
-                  </a>
-                  <div class="dropdown-menu  dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
-                      <a class="dropdown-item" (click)="descargarDatos()"  >Exportar a excel <img class="tamimg" src="/assets/img/microsoft-excel.svg" alt=""> </a>
-                      <a class="dropdown-item" (click)="descargarPDF()"  > Exportar a pdf <i class="material-icons">picture_as_pdf</i></a>
-                    
-                      
-                  </div>
-              </li>
-      
-              </div>
-              <div class="card-body text-center">
-                <div class="table-responsive">
-                  <table class="table ">
-                    <thead class="text-primary red-bold-text">
-                      <th>Nº</th>
-                      <th>Plato</th>
-                      <th>Cantidad</th>
-                      <th>Precio</th>
-                      <th>Fecha</th>
-                   
-                    </thead>
-                    
-                    <tbody *ngFor="let item of creditosss ;let i=index ">
-                      <tr>
+        </a>
+        
+        
+    </div>
     
     
-                        <td>
-                          {{i+1}}
-                        </td>
-                        <td>
-                          {{item.plato.descripcion}}
-                        </td>
-                      
-                        <td>
-                          {{item.cantidad}}
-                        </td>
-                        <td>
-                          {{item.precio}}
-                        </td>
-                        <td>
-                          {{item.fecha}}
-                        </td>
-                        
-                      
-                       
+    <div class="sidebar-wrapper   ">
+        <br>
+          
+        <div class="text-center esp" routerLink="/reporte"  >
+          <span  class="icon-text "><i class="material-icons cl">home</i> </span> <span class="icon-text">Inicio</span>
+        </div>  
     
-                      </tr>
-    
-                    </tbody>
-                    <tbody>
-                      <thead>
-                        <th>
-                        <h2> Total a pagar:</h2>   {{ calcularTotal() | currency:'USD':'symbol':'1.2-2'}}
-                        </th>
-                      </thead>
-                    </tbody>
-                  </table>
-    
-    
-    
+      <div *ngIf="isMobileMenu()">
+       
+     
+        <ul class="nav navbar-nav nav-mobile-menu">
+          
+            <li class="nav-item dropdown">
+             
+                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
+                    <a class="dropdown-item" href="#">Mike John responded to your email</a>
+                    <a class="dropdown-item" href="#">You have 5 new tasks</a>
+                    <a class="dropdown-item" href="#">You're now friend with Andrew</a>
+                    <a class="dropdown-item" href="#">Another Notification</a>
+                    <a class="dropdown-item" href="#">Another One</a>
                 </div>
+            </li>
+         
+        </ul>
+      </div>
+      <ul class="nav">
+        <li routerLinkActive="active" *ngFor="let menuItem of menuItems" class="{{menuItem.class}} nav-item curr">
+          <a class="nav-link curr" (click)="menuItem.path === '/login' ? showModalcerrar() : navigateToRoute(menuItem.path)">
+            <i class="material-icons">{{menuItem.icon}}</i>
+            <p>{{menuItem.title}}</p>
+          </a>
+        </li>
+      </ul>
+      
+
+
+      
+      
+    </div>
+        
+        <div class="sidebar-background" style="background-image: url(./assets/img/sidebar-4.jpg)"></div>
+    </div>
+    <div class="main-panel">
+
+              <!-- NAVBARRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRR-->
+
+          <!-- NAVBARRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRR-->
+
+          <nav class="navbar navbar-expand-lg navbar  navbar-absolute fixed-top">
+            <div class="container-fluid">
+                <div class="navbar-wrapper">
+                    <img src="assets/img/log.png" alt="" class="logonavbar">
+                   
+                </div>
+                
+
+                <button mat-icon-button color="accent" aria-label="Example icon button with a menu icon"    class="navbar-toggler" type="button" (click)="sidebarToggle()">
+                  
+                  <span class="sr-only">Toggle navigation</span>
+                  <span class="navbar-toggler-icon icon-bar"></span>
+                  <span class="navbar-toggler-icon icon-bar"></span>
+                  <span class="navbar-toggler-icon icon-bar"></span>
+                </button>
+
+
+                <div class="collapse navbar-collapse justify-content-end " id="navigation" >
+                  
+                    <ul class="navbar-nav">
+                      
+                        
+                       
+                    </ul>
+                </div>
+            </div>
+        </nav>
+        
+      
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+        
+        <router-outlet>
+          <br><br><br><br><br> 
+    <div class="container-fluid">
+  
+   
+  
+  
+      <div class="row ">
+           
+      
+        <div class="col-md-12">
+  
+          <div class="card">
+            <div class="card-header card-header-danger d-flex align-items-center justify-content-between">
+              
+              <h4 class="card-title disabled"> <img src="/assets/img/tarjeta-de-credito.png" class="edit" alt=""> Reporte de convenio
+              </h4>
+              <li class="nav-item dropdown">
+                <a class="nav-link label2 col" href="javascript:void(0)" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"  >
+                  Descargar    <i class="material-icons">file_download</i> 
+                  
+                    <p>
+                        <span class="d-lg-none d-md-block"> </span>
+                    </p>
+                </a>
+                <div class="dropdown-menu  dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
+                    <a class="dropdown-item" (click)="descargarDatos()"  >Exportar a excel <img class="tamimg" src="/assets/img/microsoft-excel.svg" alt=""> </a>
+                    <a class="dropdown-item" (click)="descargarPDF()"  > Exportar a pdf <i class="material-icons">picture_as_pdf</i></a>
+                  
+                    
+                </div>
+            </li>
+    
+            </div>
+            <div class="card-body text-center">
+              <div class="table-responsive">
+                <table class="table ">
+                  <thead class="text-primary red-bold-text">
+                    <th>Nº</th>
+                    <th>Plato</th>
+                    <th>Precio</th>
+                    <th>Cantidad</th>
+                    <th>Precio final</th>
+                    <th>Fecha</th>
+                 
+                  </thead>
+                  
+                  <tbody *ngFor="let item of creditosss ;let i=index ">
+                    <tr>
+  
+  
+                      <td>
+                        {{i+1}}
+                      </td>
+                      <td>
+                        {{item.plato.descripcion}}
+                      </td>
+                      <td>
+                        {{item.precio}}
+                      </td>
+                      <td>
+                        {{item.cantidad}}
+                      </td>
+                   
+                      <td>
+                        {{item.precio_final}}
+                      </td>
+                      <td>
+                        {{item.fecha}}
+                      </td>
+                      
+                    
+                     
+  
+                    </tr>
+  
+                  </tbody>
+                  <tbody>
+                    <thead>
+                      <th>
+                      <h2> Total a pagar:</h2>   {{ calcularTotal() | currency:'USD':'symbol':'1.2-2'}}
+                      </th>
+                    </thead>
+                  </tbody>
+                </table>
+  
+  
+  
               </div>
             </div>
           </div>
-    
         </div>
+  
       </div>
-      
+    </div>
+        </router-outlet>
+        <div *ngIf="isMaps('maps')">
+            <app-footer>
+  
+              
+            </app-footer>
+        </div>
     </div>
     
-
-   
-  </main>
-
-
+  </div>
   
+  
+  
+   
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+   </div>
+  
+  
+   
+  
+   
+   
+  
+  
+    
+  
+    
